# Akahalu-Portfolio

./: .gitignore  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/core/: config.py
backend/app/db/: base.py  dependencies.py  model_registry.py  session.py  types.py
backend/app/models/: __init__.py  associations.py  email_verification_token.py  login_attempt.py  password_reset_token.py  permission.py  project.py  project_associations.py  project_category.py  project_link.py  project_media.py  project_technology.py  refresh_token.py  role.py  session.py  user.py
backend/app/repositories/: base.py  email_verification_token_repository.py  login_attempt_repository.py  password_reset_token_repository.py  permission_repository.py  refresh_token_repository.py  role_repository.py  session_repository.py  user_repository.py
backend/app/schemas/: account_lifecycle.py  auth.py  base.py  permission.py  role.py  user.py  user_admin.py
backend/app/security/: __init__.py  account_tokens.py  passwords.py  tokens.py
backend/app/services/: account_lifecycle_service.py  authentication_service.py  identity_service.py  rbac_service.py  user_admin_service.py
backend/migrations/: env.py
backend/migrations/versions/: 1d1a0aa75236_add_authentication_sessions_and_tokens.py  616a4a5910c3_create_identity_foundation.py  e518f89e76f5_add_portfolio_project_domain.py  fc710990420c_add_account_lifecycle_tokens.py
backend/scripts/: seed_identity.py
backend/tests/: conftest.py
(+44 files in other folders)
